--- a/src/app/components/views/dashboard/main/main.component.scss
+++ b/src/app/components/views/dashboard/main/main.component.scss
@@ -1,14 +1,13 @@
 @import '~@angular/material/theming';
-
-#display{
-    display: grid;
-    grid-template-rows:auto auto;
+*{
+    color:white;
 }
-#goal-overview{
-    display: grid;
-    grid-template-columns:auto auto;
+mat-cell,.overview-data{
+    font-size:1.25em;
 }
-
+.data,.overview-data{
+    background-color:#52aa8a;
+}
 #display-data{
     display: grid;
     grid-template-columns: 2fr 2fr;
@@ -18,40 +17,96 @@
     grid-gap:2vw;
 
 }
-.data{
-    width:100%;
-    height: 200px;
-    background-color: #e0f7fa;
-    align-items: center;border-radius: 10px;
-    @include mat-elevation(4);
-    padding:40px 10px 10px 10px;
-
-}
 .overview-data{
-    width:20vw;
+    width:24vw;
     height: 5vw;
     justify-self: center;
-    background-color: #e0f7fa;
+    // background-color: #52aa8a;
     align-items: center;
     border-radius: 10px;
     @include mat-elevation(4);
     padding:40px 10px 10px 10px;
+    overflow: auto;
 }
+.data-heading{
+    background-color:#388659;
+    justify-self: center;
+    align-content: center;
+    width:20vw;
+    transform: translateY(10px);
+    @include mat-elevation(2);
+    color:#ffffff;
+    font-size: 1.75em;
+    padding:5px 10px;
+
+}
+#display-data {
+    .data-heading{
+        width:35vw;
+    }
+    .data{
+        width:39vw;
+    }
+}
+    .data{
+        height: 50vh;
+        // background-color:  #d30051;
+        justify-self: center;
+        border-radius: 10px;
+        @include mat-elevation(4);
+        padding:40px 10px 10px 10px;
+        overflow: auto;
+    
+    }
+
+.is-mobile{
+    
+    #daily{
+        .data-heading{
+            padding:.5rem;
+            transform: translateY(25px);
+        }
+        .overview-data{
+            width:22vw;
+            align-items: center;
+            border-radius: 10px;
+            @include mat-elevation(4);
+            padding:40px 10px 10px 10px;
+        }
+        
+    } 
+    #display-data{
+            display: grid;
+            grid-template-columns: 2fr 2fr;
+            align-content: center;
+            justify-content: center;
+            grid-gap:2vw;
+        
+        }  
+}
+
+#goal-overview{
+    display: grid;
+    grid-template-columns:repeat(4,auto);
+}
+
+// .data{
+//     // width:100%;
+//     height: 50vw;
+//     background-color: #e0f7fa;
+//     align-items: center;border-radius: 10px;
+//     @include mat-elevation(4);
+//     padding:40px 10px 10px 10px;
+//     overflow: auto;
+
+// }
+
 .data-box{
     display: grid;
     grid-template-columns: 1fr;
     align-content:center;
 }
-.data-heading{
-    background-color:#00bbd3;
-    justify-self: center;
-    padding:25px 50px;
-    transform: translateY(30px);
-    @include mat-elevation(2);
-    color:#ffffff;
-    font-size: 1.5em;
 
-}
 mat-table{
     background-color:#fff0;
 }
